@@ -1,7 +1,7 @@
 package net.swofty.type.skyblockgeneric.item.set.sets;
 
-import net.swofty.commons.statistics.ItemStatistic;
-import net.swofty.commons.statistics.ItemStatistics;
+import net.swofty.commons.skyblock.statistics.ItemStatistic;
+import net.swofty.commons.skyblock.statistics.ItemStatistics;
 import net.swofty.type.skyblockgeneric.event.value.SkyBlockValueEvent;
 import net.swofty.type.skyblockgeneric.event.value.ValueUpdateEvent;
 import net.swofty.type.skyblockgeneric.event.value.events.MaxHealthValueUpdateEvent;
@@ -9,6 +9,7 @@ import net.swofty.type.skyblockgeneric.item.set.impl.ArmorSet;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class ElegantTuxedoSet extends SkyBlockValueEvent implements ArmorSet {
     @Override
@@ -18,7 +19,7 @@ public class ElegantTuxedoSet extends SkyBlockValueEvent implements ArmorSet {
 
     @Override
     public ArrayList<String> getDescription() {
-        return new ArrayList<>(Arrays.asList(
+        return new ArrayList<>(List.of(
                 "Max health set to §c250♥§7.",
                 "Deal §c+150% §7damage!",
                 "§8Very stylish."
