@@ -1,7 +1,7 @@
 package net.swofty.type.skyblockgeneric.item.set.sets;
 
-import net.swofty.commons.statistics.ItemStatistic;
-import net.swofty.commons.statistics.ItemStatistics;
+import net.swofty.commons.skyblock.statistics.ItemStatistic;
+import net.swofty.commons.skyblock.statistics.ItemStatistics;
 import net.swofty.type.skyblockgeneric.event.value.SkyBlockValueEvent;
 import net.swofty.type.skyblockgeneric.event.value.ValueUpdateEvent;
 import net.swofty.type.skyblockgeneric.event.value.events.PlayerDamagedByMobValueUpdateEvent;
@@ -9,6 +9,7 @@ import net.swofty.type.skyblockgeneric.item.set.impl.ArmorSet;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class PumpkinSet extends SkyBlockValueEvent implements ArmorSet {
     @Override
@@ -18,7 +19,7 @@ public class PumpkinSet extends SkyBlockValueEvent implements ArmorSet {
 
     @Override
     public ArrayList<String> getDescription() {
-        return new ArrayList<>(Arrays.asList(
+        return new ArrayList<>(List.of(
                 "Reduces all taken damage by §a+10%",
                 "and deal &a+10% §7more damage."
         ));
@@ -34,6 +35,7 @@ public class PumpkinSet extends SkyBlockValueEvent implements ArmorSet {
         float value = (float) event.getValue();
 
         if (!isWearingSet(event.getPlayer())) return;
+        int pieceCount = getWornPieceCount(event.getPlayer());
 
         event.setValue(value * 0.9);
     }
